deploy/kubernetes/namespace-portfolio.yml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-rodriguez
  labels:
    name: portfolio-rodriguez
