deploy/kubernetes/deploy-portfolio.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  namespace: portfolio-rodriguez 
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio
          image: rodriguez22/portfolio:latest # Tu imagen en Docker Hub
          ports:
            - containerPort: 3000 # Next.js corre por defecto en el 3000
