deploy/kubernetes/service-portfolio.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio-rodriguez # 👈 Namespace actualizado
spec:
  type: NodePort
  selector:
    app: portfolio # 👈 Esto conecta este Service con tu Deployment
  ports:
    - port: 80          # El puerto que expone el Service (el que lee el Ingress)
      targetPort: 3000  # 👈 IMPORTANTE: El puerto donde corre Next.js dentro de tu contenedor
      nodePort: 30081   # Puerto expuesto en los nodos físicos del clúster
