deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: proyectoportfolio
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30090
