deploy/kubernetes/ingress-portfolio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  namespace: portfolio-rodriguez # Tu namespace
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: public
  tls:
  - hosts:
    - jrodrodriguez.es
    - www.jrodrodriguez.es
    secretName: portfolio-tls-secret 
  rules:
    - host: jrodrodriguez.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80 # El Ingress envía el tráfico al puerto 80 del Service
    - host: www.jrodrodriguez.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio-service
                port:
                  number: 80
